--- a/src/main/resources/templates/article_list.html
+++ b/src/main/resources/templates/article_list.html
@@ -1,1 +1,17 @@
-<h1>하이</h1>
+<table>
+    <thead>
+    <tr>
+        <th>번호</th>
+        <th>제목</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="article : ${articleList}">
+        <td th:text="${article.id}"></td>
+        <td>
+            <a th:href="@{|/article/detail/${article.id}|}" th:text="${article.subject}"></a>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<a th:href="@{/article/create}">등록</a>
